send HTML to notebook instead of plain text

--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,11 @@
 <title>notebook</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+    .input-cell {
+        color: green;
+    }
+</style>
 <body>
     <div id="cells"></div>
     <script src="client.js"></script>
