--- a/client/static/index.html
+++ b/client/static/index.html
@@ -3,6 +3,15 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+    body {
+        margin: 1em auto;
+        max-width: 90ch;
+        padding: 0 .62em;
+        font: 1em sans-serif;
+    }
+    img {
+        max-width: 130%;
+    }
     .input-cell {
         color: green;
     }
