add pygments for highlighting

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -12,9 +12,7 @@
     img {
         max-width: 130%;
     }
-    .input-cell {
-        color: green;
-    }
+    __PYGMENT_STYLES__
     .ansi2html-content { display: inline; white-space: pre-wrap; word-wrap: break-word; }
     .body_foreground { color: #AAAAAA; }
     .body_background { background-color: #000000; }
